--- a/LightBnB_WebApp-master/public/index.html
+++ b/LightBnB_WebApp-master/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/jquery-ui.min.css">
 
   <title>LightBnB</title>
 </head>
@@ -21,11 +22,12 @@
   <script src="javascript/libraries/jquery-3.4.0.min.js"></script>
   <script src="javascript/libraries/addressfield/jquery.addressfield.min.js"></script>
   <script src="javascript/libraries/moment.js"></script>
+  <script src="javascript/libraries/jquery-ui.min.js"></script>
   
   <script src="javascript/network.js"></script>
   <script src="javascript/views_manager.js"></script>
   <script src="javascript/index.js"></script>
-
+  
   <script src="javascript/components/header.js"></script>
   <script src="javascript/components/login_form.js"></script>
   <script src="javascript/components/new_property_form.js"></script>
@@ -33,7 +35,7 @@
   <script src="javascript/components/property_listings.js"></script>
   <script src="javascript/components/search_form.js"></script>
   <script src="javascript/components/signup_form.js"></script>
-
+  
 
 
 </body>
